@@ -1,7 +1,0 @@
-".First.lib" <-
-function(lib, pkg)
-{
-  library.dynam("evd", package = pkg, lib.loc = lib)
-  return(invisible(0))
-}
-
