@@ -1,3 +1,7 @@
+CHANGES FROM VERSION 2.2-5 ARE AS FOLLOWS
+
+  Included proper NAMESPACE file and removed zzz.R.
+
 CHANGES FROM VERSION 2.2-4 ARE AS FOLLOWS
 
   Added default NAMESPACE file to avoid note produced
